trying to fix image

--- a/_posts/2016-02-09-welcome.md
+++ b/_posts/2016-02-09-welcome.md
@@ -4,12 +4,12 @@ tags: []
 style: fill
 color: secondary
 comments: true
-description: Welcome
+description: 
 ---
 
 Hi, thanks for taking the time to look at my porfolio. I've included some of my most exciting projects. 
 
-If you're interested in looking at my mechanical projects from undergrad and earlier, please check out my [old portfolio](https://tylersmithline.wixsite.com/portfolio). 
+If you're interested in looking at my hardware projects from during my undergrad at Illiois and earlier, please check out my old [mechanical portfolio](https://tylersmithline.wixsite.com/portfolio). 
 
 <!-- Source: [atlassian](https://www.atlassian.com/git/tutorials/what-is-version-control)
 
